--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,27 +1,53 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+
+
+@font-face {
+  font-family: "PixelFont";
+  src: url("../assets/fonts/Pixel/PixelifySans-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: "PixelFont";
+  src: url("../assets/fonts/Pixel/PixelifySans-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
-html,
+@font-face {
+  font-family: "PixelFont";
+  src: url("../assets/fonts/Pixel/PixelifySans-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+@font-face {
+  font-family: "PixelFont";
+  src: url("../assets/fonts/Pixel/PixelifySans-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  font-family: "PixelFont", sans-serif;
+  font-weight: 500; /* Default font weight */
+  font-size: 14px; /* Default font size */
+  line-height: 1.5;
+  color: #000000; /* Default text color */
+  text-align: left;
+  letter-spacing: 0.022em;
 }
+button{
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "PixelFont", sans-serif;
 }
 
 * {
@@ -30,13 +56,3 @@ body {
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
